@@ -1,3 +1,9 @@
+2013-06-19  Hidehisa Akiyama  <akky@users.sourceforge.jp>
+
+	* rcsc/action/body_hold_ball2008.cpp:
+	- ホールドボールの評価関数を修正．敵がキッカブルになる状態に対して
+	は大きめのペナルティを与えるように変更
+
 2013-06-18  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* rcsc/player/world_model.cpp:
